@@ -1,6 +1,11 @@
 #include "bitmapio.h"
 #include "woopsifuncs.h"
 
+#define BITMAPINFOHEADER 40
+#define BITMAP_HEADER_SIZE 14
+#define BITMAP_RESOLUTION 2835
+#define COLOUR_PLANES 1
+
 using namespace WoopsiUI;
 
 Bitmap* BitmapIO::loadBMP(const char* filename) {
@@ -19,11 +24,93 @@ Bitmap* BitmapIO::loadBMP(const char* filename) {
 	Bitmap* bitmap = new Bitmap(dibHeader.width, dibHeader.height);
 
 	parsePixelData(file, bmpHeader, dibHeader, bitmap);
+	
+	delete file;
 
 	return bitmap;
 }
 
 void BitmapIO::saveBMP(const char* filename, Bitmap* bitmap) {
+	
+	// Open the file
+	BinaryFile* file = new BinaryFile(filename, BinaryFile::FILE_MODE_WRITE, BinaryFile::ENDIAN_MODE_LITTLE_ENDIAN);
+	
+	// Image size calculated in bytes - multily by 3 as each pixel uses 3 bytes
+	// All images saved as 24-bit
+	u32 imageSize = bitmap->getWidth() * bitmap->getHeight() * 3;	// *FIX* cater for padding?
+	u32 offset = BITMAPINFOHEADER + BITMAP_HEADER_SIZE;
+	u32 size = imageSize + offset;
+
+	// Bitmap must be aligned to 4-byte boundaries, so add any extra to the size
+	u8 sizeMod = size % 4;
+	u8 sizePaddingBytes = 0;
+	if (sizeMod != 0) {
+		sizePaddingBytes = 4 - sizeMod;
+	}
+
+	// Write the BMP header
+	file->writeU8('B');						// Identifier
+	file->writeU8('M');
+	file->writeU32(size + sizePaddingBytes);// Size
+	file->writeU32(0);						// Two reserved shorts
+	file->writeU32(offset);					// Offset
+	
+	// Write the V3 DIB header
+	file->writeU32(BITMAPINFOHEADER);		// Header size
+	file->writeS32(bitmap->getWidth());		// Width
+	file->writeS32(bitmap->getHeight());	// Height
+	file->writeU16(COLOUR_PLANES);			// Colour planes
+	file->writeU16(24);						// Bits per pixel
+	file->writeU32(0);						// Compression method
+	file->writeU32(imageSize + sizePaddingBytes);	// Image size *FIX* cater for padding?
+	file->writeU32(BITMAP_RESOLUTION);		// Horizontal resolution
+	file->writeU32(BITMAP_RESOLUTION);		// Vertical resolution
+	file->writeU32(0);						// Colours in palette
+	file->writeU32(0);						// Important colours used
+	
+	// Calculate the number of padding bytes per row
+	u8 mod = bitmap->getWidth() % 4;
+	u8 paddingBytes = 4 - mod;
+	
+	// Write the pixel data
+	for (s16 y = bitmap->getHeight() - 1; y >= 0; --y) {
+		for (s16 x = 0; x < bitmap->getWidth(); ++x) {
+			
+			// Components of each pixel are stored in the following format:
+			// b - 1 byte
+			// g - 1 byte
+			// r - 1 byte
+
+			// Since the DS uses pixels in 5-bit, not 8-bit format, the
+			// values extracted need to be shifted up 3 places
+			u16 pixel = bitmap->getPixel(x, y);
+			u8 b = ((pixel >> 10) & 31) << 3;
+			u8 g = ((pixel >> 5) & 31) << 3;
+			u8 r = (pixel & 31) << 3;
+			
+			// Write the components to the file in BGR order
+			file->writeU8(b);
+			file->writeU8(g);
+			file->writeU8(r);
+		}
+		
+		// Reached end of row of pixels - BMP data is aligned to 4-byte boundary, so write
+		// padding bytes
+		if (mod != 0) {
+			for (u8 i = 0; i < paddingBytes; ++i) {
+				file->writeU8(0);
+			}
+		}
+	}
+
+	// Write any padding at the end of the file
+	if (sizeMod != 0) {
+		for (u8 i = 0; i < sizePaddingBytes; ++i) {
+			file->writeU8(0);
+		}
+	}
+	
+	delete file;
 }
 
 void BitmapIO::parseBMPHeader(BinaryFile* file, BMPHeader& bmpHeader) {
@@ -75,9 +162,12 @@ void BitmapIO::parsePixelData(BinaryFile* file, BMPHeader& bmpHeader, DIBV3Heade
 }
 
 void BitmapIO::parsePixelData24(BinaryFile* file, BMPHeader& bmpHeader, Bitmap* bitmap) {
+	
+	// Calculate the number of padding bytes per row
+	u8 mod = bitmap->getWidth() % 4;
+	u8 paddingBytes = 4 - mod;
 
-	file->seek(bmpHeader.offset);
-
+	// Run through rows backwards as BMP rows are stored in reverse order
 	for (s16 y = bitmap->getHeight() - 1; y >= 0; --y) {
 		for (s16 x = 0; x < bitmap->getWidth(); ++x) {
 
@@ -94,6 +184,14 @@ void BitmapIO::parsePixelData24(BinaryFile* file, BMPHeader& bmpHeader, Bitmap* 
 			
 			// Draw the pixel to the bitmap
 			bitmap->drawPixel(x, y, woopsiRGB(r, g, b));
+		}
+		
+		// Reached end of row of pixels - BMP data is aligned to 4-byte boundary, so skip
+		// any remaining padding bytes
+		if (mod != 0) {
+			for (u8 i = 0; i < paddingBytes; ++i) {
+				file->readU8();
+			}
 		}
 	}
 }
