@@ -31,6 +31,8 @@ void BitmapLoader::startup() {
 		Bitmap* bitmap = BitmapIO::loadBMP("/logo.bmp");
 		
 		superBitmap->drawBitmap(0, 0, 256, 192, bitmap->getBitmap(), 0, 0, 256, 192);
+		
+		BitmapIO::saveBMP("/logo2.bmp", bitmap);
 	}
 
 	// Ensure Woopsi can draw itself
